--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>¡Feliz Cumple, Abu!</title>
 </head>
 <body>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -28,7 +28,7 @@
 
 <script>
 function openImage(){
-    window.location.href = "";
+    window.location.href = "https://duplino.github.io/cumpleAbu/Voucher.png";
 }
 
 
